make service respect Docker memory limits, libraries updated, minor code improvements